@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.dbpedia.extraction</groupId>
-        <artifactId>main</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <groupId>org.dbpedia</groupId>
+        <artifactId>extraction</artifactId>
+        <version>3.8</version>
     </parent>
 
+    <groupId>org.dbpedia.extraction</groupId>
     <artifactId>scripts</artifactId>
-    <packaging>jar</packaging>
     <name>DBpedia Scripts</name>
 
     <build>
@@ -24,20 +22,89 @@
                 <configuration>
                     <!-- TODO configure a launcher for each script -->
                     <launchers>
-                        <!-- launcher>
-                         <id>MyScript</id>
-                         <mainClass>org.dbpedia.extraction.scripts.MyScript</mainClass>
-                         <jvmArgs>
-                           <jvmArg>-Xmx1024m</jvmArg>
-                         </jvmArgs>
-                       </launcher -->
                         <launcher>
                             <id>ResolveRedirects</id>
                             <mainClass>org.dbpedia.extraction.scripts.ResolveRedirects</mainClass>
                             <jvmArgs>
                                 <jvmArg>-Xmx4096m</jvmArg>
                             </jvmArgs>
-                            <!-- mvn scala:run -Dlauncher=ResolveRedirects "-DaddArgs=/data/en/redirects_en.nt|/data/en/mappingbased_properties_en.nt|/data/en/page_links_en.nt" -->
+                            <!-- ../run  ResolveRedirects /data/en/redirects_en.nt /data/en/mappingbased_properties_en.nt /data/en/page_links_en.nt -->
+                        </launcher>
+                        <launcher>
+                            <id>CreateFreebaseLinks</id>
+                            <mainClass>org.dbpedia.extraction.scripts.CreateFreebaseLinks</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-Xms512m</jvmArg>
+                                <jvmArg>-Xmx4096m</jvmArg><!-- we load all DBpedia titles, so we need some space. Didn't test how much is actually necessary, 4G is probably too much. -->
+                                <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                            <!-- URIs and N-Triple escaping -->
+                            <!-- ../run CreateFreebaseLinks false false /data/dbpedia .nt.gz freebase-links.nt.bz2 freebase-datadump-quadruples.tsv.bz2 -->
+                            <!-- IRIs and Turtle escaping -->
+                            <!-- ../run CreateFreebaseLinks true true /data/dbpedia .ttl.gz freebase-links.nt.bz2 freebase-datadump-quadruples.tsv.bz2 -->
+                        </launcher>
+                        <launcher>
+                            <id>ProcessInterLanguageLinks</id>
+                            <mainClass>org.dbpedia.extraction.scripts.ProcessInterLanguageLinks</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-Xms5632m</jvmArg>
+                                <jvmArg>-Xmx6656m</jvmArg><!-- all languages (10000+ articles) need 5.5G (5632M) with .ttl and IRIs, 6.5G (6656M) with .nt and URIs (more and longer unique titles). -->
+                                <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                                <!-- <jvmArg>-XX:+PrintGC</jvmArg> -->
+                                <!-- <jvmArg>-XX:+PrintGCTimeStamps</jvmArg> -->
+                            </jvmArgs>
+                            <!-- 'fr,de' mean specific languages. '-' means no language uses generic domain. -->
+                            <!-- '-fr-de' is file name part, full names are e.g. enwiki-20120601-interlanguage-links-same-as-fr-de.ttl.gz and enwiki-20120601-interlanguage-links-see-also-fr-de.ttl.gz -->
+                            <!-- ../run ProcessInterLanguageLinks /data/dbpedia interlanguage-links-fr-de.txt.gz -fr-de .ttl.gz - fr,de -->
+                            
+                            <!-- '10000-' means languages by article count range. 'en' uses generic domain. -->
+                            <!-- '-' means no file name part, full names are e.g. enwiki-20120601-interlanguage-links-same-as.ttl.gz -->
+                            <!-- ../run ProcessInterLanguageLinks /data/dbpedia interlanguage-links-ttl.txt.gz - .ttl.gz en 10000- -->
+                            
+                            <!-- '-' means don't write dump file. -->
+                            <!-- ../run ProcessInterLanguageLinks /data/dbpedia - -fr-de .ttl.gz - fr,de -->
+                            
+                            <!-- if no languages are given, read links from dump file, not from triple files. -->
+                            <!-- ../run ProcessInterLanguageLinks /data/dbpedia interlanguage-links.txt.gz - .ttl.gz -->
+                            
+                            <!-- generate links for all DBpedia I18N chapters in nt format -->
+                            <!-- '-chapters' is file name part, full names are e.g. enwiki-20120601-interlanguage-links-same-as-chapters.ttl.gz -->
+                            <!-- ../run ProcessInterLanguageLinks /data/dbpedia interlanguage-links-chapters-nt.txt.gz -chapters .nt.gz en cs,en,fr,de,el,it,ja,ko,pl,pt,ru,es -->
+                            
+                            <!-- generate links for all languages that have a namespace on mappings.dbpedia.org in nt format -->
+                            <!-- '-mapped' is file name part, full names are e.g. enwiki-20120601-interlanguage-links-same-as-mapped.ttl.gz -->
+                            <!-- ../run ProcessInterLanguageLinks /data/dbpedia interlanguage-links-mapped-nt.txt.gz -mapped .nt.gz en @mappings -->
+                        </launcher>
+                        <launcher>
+                            <id>MapSubjectUris</id>
+                            <mainClass>org.dbpedia.extraction.scripts.MapSubjectUris</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                            <!-- ../run MapSubjectUris /home/dbpedia interlanguage-links-same-as labels,short-abstracts,long-abstracts -en-uris .nt.gz dbpedia.org 10000- -->
+                        </launcher>
+                        <launcher>
+                            <id>ResolveTransitiveLinks</id>
+                            <mainClass>org.dbpedia.extraction.scripts.ResolveTransitiveLinks</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                            <!-- ../run ResolveTransitiveLinks /home/dbpedia redirects transitive-redirects .nt.gz 10000- -->
+                        </launcher>
+                        <launcher>
+                            <id>MapObjectUris</id>
+                            <mainClass>org.dbpedia.extraction.scripts.MapObjectUris</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                            <!-- ../run MapObjectUris /home/dbpedia transitive-redirects infobox-properties,mappingbased-properties,... -redirected .nt.gz 10000- -->
+                            <!-- the following should be redirected (as of 2012-07-11) -->
+                            <!-- disambiguations,infobox-properties,mappingbased-properties,page-links,persondata,topical-concepts -->
                         </launcher>
                     </launchers>
                 </configuration>
@@ -53,14 +120,16 @@
             <artifactId>core</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-compress</artifactId>
-        </dependency>
-
+        <!-- TODO: find a version in a public repo. -->
         <dependency>
             <groupId>org.openrdf</groupId>
             <artifactId>openrdf</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
         </dependency>
 
     </dependencies>
